Fix Windows Chrome subsection visibility bug and shorten header gradient

--- a/app/styles/desktop.scss
+++ b/app/styles/desktop.scss
@@ -154,7 +154,7 @@ $icon-font-path: '../fonts/';
   }
 
   #section-header {
-    height: 50px;
+    height: 40px;
 
     /* Permalink - use to edit and share this gradient: http://colorzilla.com/gradient-editor/#000000+0,000000+100&0.89+0,0+100 */
     background: -moz-linear-gradient(top,  rgba(0,0,0,0.89) 0%, rgba(0,0,0,0) 100%); /* FF3.6-15 */
